match_coin_option/match_coin_option_err.log
   Compiling match_coin_option v0.1.0 (/home/haha/Rust/match_coin_option)
error[E0004]: non-exhaustive patterns: `None` not covered
   --> src/main.rs:10:8
    |
10  |     match x {
    |           ^ pattern `None` not covered
    |
note: `Option<i32>` defined here
   --> /home/haha/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/option.rs:574:1
    |
574 | pub enum Option<T> {
    | ^^^^^^^^^^^^^^^^^^
...
578 |     None,
    |     ---- not covered
    = note: the matched value is of type `Option<i32>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
12  ~         Some(i) => Some(i+1),
13  ~         None => todo!(),
    |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `match_coin_option` (bin "match_coin_option") due to 1 previous error
